--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,11 +1,11 @@
 /*
-Theme Name: Desert Oral Surgery
+Theme Name: Dr. Quardt Medical Spa & Tattoo Removal
 Theme URI: http://www.creativetakeweb.com
 Description: Theme produced by CreativeTake Medical
 Version: 1.0
 Author: CreativeTake Medical
 Author URI: http://www.creativetakeweb.com
-Text Domain: desertdental
+Text Domain: drqtattoo
 */
 /* =Reset default browser CSS. Based on work by Eric Meyer: http://meyerweb.com/eric/tools/css/reset/index.html
 -------------------------------------------------------------- */
