--- a/assets/css/_slicknav.scss
+++ b/assets/css/_slicknav.scss
@@ -11,7 +11,7 @@
   }
 
   .slicknav_menu .slicknav_icon-bar {
-    background-color: $theme-secondary-color;
+    background-color: $white;
   }
 
   .slicknav_nav {
