--- a/assets/css/_main.scss
+++ b/assets/css/_main.scss
@@ -496,6 +496,7 @@ a.btn-secondary {
 .float-box .wpcf7 input[type='submit']:hover,
 .widget .wpcf7 input[type='submit']:hover,
 a.btn-primary:focus,
+a.btn-primary:active,
 a.btn-primary:hover {
   cursor: pointer;
   color: $white;
