--- a/assets/css/_sections.scss
+++ b/assets/css/_sections.scss
@@ -13,6 +13,7 @@
   display: -ms-flexbox !important;
   display: flex !important;
 }
+
 // Slider Contact Box
 /* SECTIONS ** */
 /* Call to Actions ** */
@@ -64,7 +65,7 @@ section.home-content .container-fluid {
 
 .featured-title,
 section.home-content #primary h1 {
-  font-family: $font-primary;
+  font-family: $font-primary-alt;
   font-size: 48px;
   font-weight: 400;
   line-height: 1;
@@ -77,7 +78,7 @@ section.home-content #primary h1 {
   text-transform: uppercase;
   color: lighten($theme-main-color, 15%); // $theme-main-color lightened a bit
   @media (max-width: $lg) {
-    font-size: 48px;
+    font-size: 36px;
   }
   @media (max-width: $md) {
     font-size: 32px;
@@ -108,91 +109,140 @@ section.home-content #primary h1 span.sub {
   }
 }
 
-.home-content .services a {
+.featured-title span {
+  padding: 0;
+  font-size: 24px;
+}
+
+#services {
+  background: url(img/bg-services.jpg) no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
+  background-size: cover;
+  padding: 12rem 0;
   position: relative;
-  display: block;
-  overflow: hidden;
-  width: 100%;
-  height: 100%;
-  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 
-  &:hover {
-    box-shadow: 0 14px 28px rgba(0,0,0,.25), 0 10px 10px rgba(0,0,0,.22);
+  @media screen and (max-width: $md) {
+    background-attachment: scroll;
   }
 
-  & h3 {
-    font-size: 32px;
-    font-weight: 600;
-    position: absolute;
-    z-index: 9;
-    bottom: 0;
+  @media screen and (max-width:$xs) {
+    padding: 4rem 0;
+    background-position: right center;
+  }
+
+  &::after {
+    content: '';
+    height: 45px;
     width: 100%;
-    margin: 0;
-    padding: 0.5rem;
-    -webkit-transition: all 0.45s ease;
-    transition: all 0.45s ease;
-    text-align: left;
-    color: $white;
+    bottom: 0;
+    background-color: rgba($white, 0.3);
+    z-index: 9;
+    position: absolute;
   }
 
-  &:hover h3 {
-    color: $black;
+  .square {
+    background: $theme-main-color;
+    height: 0;
+    padding-bottom: 100%;
+    position: relative;
+    text-align: center;
+    overflow: hidden;
+    @media screen and (max-width:$xs) {
+      padding-bottom: 30%;
+      margin: 1rem 0;
+    }
+    
+    .square-inn {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      width: 100%;
+      padding: .75em;
+      font-size: 2.5vw;
+    }
+
+    &::after {
+      content: '';
+      display: block;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 5px;
+      background-color: rgba($white, 0.3);
+      opacity: 0;
+      transition: all 0.3s ease;
+    }
+
+    &:hover {
+      &::after {
+        opacity: 1;
+      }
+    }
+
+    .box {
+      display: block;
+      position: absolute;
+      bottom: 5px;
+      right: 0;
+      background-color: rgba($white, 0.3);
+      opacity: 0;
+      transition: all 0.3s ease;
+      span {
+        transform: scale(0.8);
+      }
+    }
+
+    &:hover {
+      .box {
+        opacity: 1;
+      }
+    }
+    
+    h3 {
+      color: $white;
+      font-family: $font-primary-alt;
+      text-align: center;
+      font-size: 30px;
+      margin: 0;
+      padding: 0;
+      line-height: 1.3;
+      @media screen and (max-width:$lg) {
+        font-size: 24px;
+      }
+      @media screen and (max-width:$md) {
+        font-size: 18px;
+      }
+      @media screen and (max-width:$sm) {
+        font-size: 13px;
+      }
+      @media screen and (max-width:$xs) {
+        font-size: 20px;
+      }
+    }
   }
 
-  & .box-overlay {
-    -webkit-transition: opacity 0.45s ease;
-    transition: opacity 0.45s ease;
-    opacity: 0.6;
-  }
-
-  &:hover .box-overlay {
-    opacity: 0;
-  }
 }
 
-.home-content .services a {
-  img {
-    -webkit-transition: -webkit-transform 0.45s ease;
-    transition: -webkit-transform 0.45s ease;
-    transition: transform 0.45s ease;
-    transition: transform 0.45s ease, -webkit-transform 0.45s ease;
-  }
-
-  &:hover img {
-    -webkit-transform: scale(1.1);
-    transform: scale(1.1);
-  }
-}
-
-.home-content .services a .box-overlay {
-  position: absolute;
-  z-index: 3;
-  top: 0;
-  left: 0;
-  display: block;
-  width: 100%;
-  height: 100%;
-  background: $theme-secondary-color;
-}
 /* Meet Doc */
 section.meet {
   overflow: hidden;
   padding: 4rem 0;
-  background: $theme-tertiary-color;
+
+  h2.featured-title {
+    font-family: $font-primary-alt;
+    font-size: 60px;
+    span {
+      font-size: 24px;
+      text-transform: uppercase;
+      margin: 2rem 0 0 0;
+    }
+  }
 
   & [class='col-sm-6'] {
     @media screen and (max-width: $xs) {
       margin-bottom: 3rem;
-    }
-  }
-
-  & h2,
-  p {
-    color: $white;
-
-    & span {
-      color: $white;
-      border-top: 1px solid $white;
     }
   }
 
@@ -202,52 +252,6 @@ section.meet {
 
   .btn {
     margin: 1rem 0 1.5rem;
-  }
-}
-
-section.meet {
-  .p-abs {
-    position: absolute;
-    z-index: 2;
-    bottom: 0;
-    left: 0;
-    padding: $bs-padding;
-    @media screen and (max-width: $md) {
-      position: relative;
-      padding: 0;
-    }
-  }
-}
-@mixin block {
-  position: absolute;
-  z-index: 1;
-  bottom: 0;
-  left: 100%;
-  display: block;
-  width: 100%;
-  height: 100%;
-  content: '';
-  background: lighten($theme-main-color, 55%);
-  @content;
-}
-
-section.meet {
-  & .creds {
-    position: relative;
-    padding: 1rem 0;
-    background: lighten($theme-main-color, 55%);
-
-    &::before {
-      @include block;
-    }
-
-    &::after {
-      @include block {
-        right: 100%;
-        left: initial;
-        width: 2.659%;
-      }
-    }
   }
 }
 
@@ -264,22 +268,20 @@ section.cta-boxes {
 
     &:hover {
       transform: scale(1.03);
-      box-shadow: 0 7px 14px rgba(#000, .4);
+      box-shadow: 0 7px 21px rgba(#000, .2);
     }
 
-    & h4 {
-      font-size: 20px;
-      position: absolute;
+    h4 {
+      font-size: 28px;
+      position: relative;
+      font-family: $font-primary-alt;
       z-index: 3;
-      bottom: 0;
       width: 100%;
       margin: 0;
-      padding: 1rem 0;
+      padding: 0;
       transition: all 0.25s ease-in-out;
       text-align: center;
-      letter-spacing: 2px;
       color: $theme-main-color;
-      background: rgba($white, .9);
       @media screen and (max-width: $md) {
         font-size: 16px;
         letter-spacing: 0;
@@ -288,7 +290,33 @@ section.cta-boxes {
 
     &:hover h4 {
       color: $white;
+    }
+
+    .holder {
+      background: rgba($white, .7);
+      width: 100%;
+      position: absolute;
+      bottom:0;
+      left:0;
+      transition: all 0.25s ease-in-out;
+      display: flex;
+      align-items: center;
+    }
+
+    &:hover .holder {
       background: $theme-secondary-color;
+    }
+
+    .box {
+      display: block;
+      position: relative;
+      right: 0;
+      background: $theme-secondary-color;
+      transition: all 0.3s ease;
+      z-index: 99;
+      span {
+        transform: scale(0.7)
+      }
     }
   }
 }
