--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -3,10 +3,11 @@
 //
 
 //Typography
-@import url( 'https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i|Sorts+Mill+Goudy:400,400i');
+@import url( 'https://fonts.googleapis.com/css?family=Cinzel|Open+Sans:300,300i,400,400i,600,600i|Sorts+Mill+Goudy:400,400i');
 
-$font-secondary: 'Open Sans', serif;
 $font-primary: 'Sorts Mill Goudy', serif;
+$font-primary-alt: 'Cinzel', serif;
+$font-secondary: 'Open Sans', serif;
 $body-font-size: 18px;
 $nav-font-size: 16px;
 
